Use the Integer cache, don't create new Integers if not needed.
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/vfs/trunk@1203703 13f79535-47bb-0310-9956-ffa450edef68